// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List 🚏 ProList support rowClassName as a function 1`] = `
<div>
  <div
    class="ant-pro"
  >
    <div
      class="ant-pro-table ant-pro-list ant-pro-list ant-pro-list-no-split"
    >
      <div
        class="ant-pro-card"
      >
        <div
          class="ant-pro-card-body"
          style="padding-block-start: 0;"
        >
          <div
            class="ant-list ant-list-split ant-pro-list-container"
          >
            <div
              class="ant-spin-nested-loading"
            >
              <div
                class="ant-spin-container"
              >
                <ul
                  class="ant-list-items"
                >
                  <li
                    class="ant-list-item ant-pro-list-row even"
                  >
                    <div
                      class="ant-pro-list-row-header "
                    >
                      <div
                        class="ant-pro-list-row-header-option "
                      />
                      <div
                        class="ant-list-item-meta"
                      >
                        <div
                          class="ant-list-item-meta-content"
                        >
                          <h4
                            class="ant-list-item-meta-title"
                          >
                            <div
                              class="ant-pro-list-row-header-title "
                            >
                              <div
                                class="ant-pro-list-row-title "
                              >
                                我是名称
                              </div>
                            </div>
                          </h4>
                          <div
                            class="ant-list-item-meta-description"
                          >
                            <div
                              class="ant-pro-list-row-description "
                            >
                              desc text
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </li>
                  <li
                    class="ant-list-item ant-pro-list-row odd"
                  >
                    <div
                      class="ant-pro-list-row-header "
                    >
                      <div
                        class="ant-pro-list-row-header-option "
                      />
                      <div
                        class="ant-list-item-meta"
                      >
                        <div
                          class="ant-list-item-meta-content"
                        >
                          <h4
                            class="ant-list-item-meta-title"
                          >
                            <div
                              class="ant-pro-list-row-header-title "
                            >
                              <div
                                class="ant-pro-list-row-title "
                              >
                                我是名称
                              </div>
                            </div>
                          </h4>
                          <div
                            class="ant-list-item-meta-description"
                          >
                            <div
                              class="ant-pro-list-row-description "
                            >
                              desc text
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`List 🚏 ProList support rowClassName as a string 1`] = `
<div>
  <div
    class="ant-pro"
  >
    <div
      class="ant-pro-table ant-pro-list ant-pro-list ant-pro-list-no-split"
    >
      <div
        class="ant-pro-card"
      >
        <div
          class="ant-pro-card-body"
          style="padding-block-start: 0;"
        >
          <div
            class="ant-list ant-list-split ant-pro-list-container"
          >
            <div
              class="ant-spin-nested-loading"
            >
              <div
                class="ant-spin-container"
              >
                <ul
                  class="ant-list-items"
                >
                  <li
                    class="ant-list-item ant-pro-list-row rowClassName"
                  >
                    <div
                      class="ant-pro-list-row-header "
                    >
                      <div
                        class="ant-pro-list-row-header-option "
                      />
                      <div
                        class="ant-list-item-meta"
                      >
                        <div
                          class="ant-list-item-meta-content"
                        >
                          <h4
                            class="ant-list-item-meta-title"
                          >
                            <div
                              class="ant-pro-list-row-header-title "
                            >
                              <div
                                class="ant-pro-list-row-title "
                              >
                                我是名称
                              </div>
                            </div>
                          </h4>
                          <div
                            class="ant-list-item-meta-description"
                          >
                            <div
                              class="ant-pro-list-row-description "
                            >
                              desc text
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`List 🚏 only has content 1`] = `
<div>
  <div
    class="ant-pro"
  >
    <div
      class="ant-result ant-result-error"
    >
      <div
        class="ant-result-icon"
      >
        <span
          aria-label="close-circle"
          class="anticon anticon-close-circle"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="close-circle"
            fill="currentColor"
            fill-rule="evenodd"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm127.98 274.82h-.04l-.08.06L512 466.75 384.14 338.88c-.04-.05-.06-.06-.08-.06a.12.12 0 00-.07 0c-.03 0-.05.01-.09.05l-45.02 45.02a.2.2 0 00-.05.09.12.12 0 000 .07v.02a.27.27 0 00.06.06L466.75 512 338.88 639.86c-.05.04-.06.06-.06.08a.12.12 0 000 .07c0 .03.01.05.05.09l45.02 45.02a.2.2 0 00.09.05.12.12 0 00.07 0c.02 0 .04-.01.08-.05L512 557.25l127.86 127.87c.04.04.06.05.08.05a.12.12 0 00.07 0c.03 0 .05-.01.09-.05l45.02-45.02a.2.2 0 00.05-.09.12.12 0 000-.07v-.02a.27.27 0 00-.05-.06L557.25 512l127.87-127.86c.04-.04.05-.06.05-.08a.12.12 0 000-.07c0-.03-.01-.05-.05-.09l-45.02-45.02a.2.2 0 00-.09-.05.12.12 0 00-.07 0z"
            />
          </svg>
        </span>
      </div>
      <div
        class="ant-result-title"
      >
        Something went wrong.
      </div>
      <div
        class="ant-result-extra"
      >
        Cannot destructure property 'prefixCls' of 'config' as it is undefined.
      </div>
    </div>
  </div>
</div>
`;

exports[`List 🚏 only has description 1`] = `
<div>
  <div
    class="ant-pro"
  >
    <div
      class="ant-result ant-result-error"
    >
      <div
        class="ant-result-icon"
      >
        <span
          aria-label="close-circle"
          class="anticon anticon-close-circle"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="close-circle"
            fill="currentColor"
            fill-rule="evenodd"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm127.98 274.82h-.04l-.08.06L512 466.75 384.14 338.88c-.04-.05-.06-.06-.08-.06a.12.12 0 00-.07 0c-.03 0-.05.01-.09.05l-45.02 45.02a.2.2 0 00-.05.09.12.12 0 000 .07v.02a.27.27 0 00.06.06L466.75 512 338.88 639.86c-.05.04-.06.06-.06.08a.12.12 0 000 .07c0 .03.01.05.05.09l45.02 45.02a.2.2 0 00.09.05.12.12 0 00.07 0c.02 0 .04-.01.08-.05L512 557.25l127.86 127.87c.04.04.06.05.08.05a.12.12 0 00.07 0c.03 0 .05-.01.09-.05l45.02-45.02a.2.2 0 00.05-.09.12.12 0 000-.07v-.02a.27.27 0 00-.05-.06L557.25 512l127.87-127.86c.04-.04.05-.06.05-.08a.12.12 0 000-.07c0-.03-.01-.05-.05-.09l-45.02-45.02a.2.2 0 00-.09-.05.12.12 0 00-.07 0z"
            />
          </svg>
        </span>
      </div>
      <div
        class="ant-result-title"
      >
        Something went wrong.
      </div>
      <div
        class="ant-result-extra"
      >
        Cannot destructure property 'prefixCls' of 'config' as it is undefined.
      </div>
    </div>
  </div>
</div>
`;

exports[`List 🚏 show loading state 1`] = `
<div>
  <div
    class="ant-pro"
  >
    <div
      class="ant-result ant-result-error"
    >
      <div
        class="ant-result-icon"
      >
        <span
          aria-label="close-circle"
          class="anticon anticon-close-circle"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="close-circle"
            fill="currentColor"
            fill-rule="evenodd"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm127.98 274.82h-.04l-.08.06L512 466.75 384.14 338.88c-.04-.05-.06-.06-.08-.06a.12.12 0 00-.07 0c-.03 0-.05.01-.09.05l-45.02 45.02a.2.2 0 00-.05.09.12.12 0 000 .07v.02a.27.27 0 00.06.06L466.75 512 338.88 639.86c-.05.04-.06.06-.06.08a.12.12 0 000 .07c0 .03.01.05.05.09l45.02 45.02a.2.2 0 00.09.05.12.12 0 00.07 0c.02 0 .04-.01.08-.05L512 557.25l127.86 127.87c.04.04.06.05.08.05a.12.12 0 00.07 0c.03 0 .05-.01.09-.05l45.02-45.02a.2.2 0 00.05-.09.12.12 0 000-.07v-.02a.27.27 0 00-.05-.06L557.25 512l127.87-127.86c.04-.04.05-.06.05-.08a.12.12 0 000-.07c0-.03-.01-.05-.05-.09l-45.02-45.02a.2.2 0 00-.09-.05.12.12 0 00-.07 0z"
            />
          </svg>
        </span>
      </div>
      <div
        class="ant-result-title"
      >
        Something went wrong.
      </div>
      <div
        class="ant-result-extra"
      >
        Cannot destructure property 'prefixCls' of 'config' as it is undefined.
      </div>
    </div>
  </div>
</div>
`;
